--- a/ray-rllib/03-Application-Cart-Pole.ipynb
+++ b/ray-rllib/03-Application-Cart-Pole.ipynb
@@ -91,16 +91,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure Ray is running:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ERROR: Multiple instances of Ray are running:\n",
+      "ERROR:   '192.168.1.149:28950', '192.168.1.149:15832'\n",
+      "ERROR: This probably means that one or more notebooks started Ray incorrectly, in addition\n",
+      "ERROR: to running this ../tools/start-ray.sh script that should be used instead.\n",
+      "ERROR:\n",
+      "ERROR:    **** Please report this bug to academy@anyscale.com ****\n",
+      "ERROR:\n",
+      "ERROR: To clean up now, go to the other notebook tabs. For each one, add and run a new code\n",
+      "ERROR: cell with the following statement:\n",
+      "\n",
+      "\tray.shutdown()\n",
+      "\n",
+      "ERROR: Then try running this cell again. If it now prints the following, everything is okay:\n",
+      "\n",
+      "\tINFO: Ray is already running.\n",
+      "\n",
+      "ERROR: However, if it still prints that multiple instances of ray are running (this message!),\n",
+      "ERROR: then do the following steps:\n",
+      "ERROR: 1. Run \"ray stop\" SEVERAL TIMES in a terminal window.\n",
+      "ERROR:    (You can start a terminal in Jupyter. Click the + under the Edit menu.)\n",
+      "ERROR: 2. Close all the other notebooks.\n",
+      "ERROR: 3. Shutdown their kernels using the Jupyter tab on the left-hand side that shows the\n",
+      "ERROR:    running kernels.\n",
+      "ERROR: Once these steps are done, then rerun the previous cell to check again. Follow\n",
+      "ERROR: the instructions that will be printed to start Ray.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!../tools/start-ray.sh  --check --verbose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-05-11 13:20:42,967\tINFO resource_spec.py:212 -- Starting Ray with 3.91 GiB memory available for workers and up to 1.97 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
-      "2020-05-11 13:20:43,306\tINFO services.py:1170 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8265\u001b[39m\u001b[22m\n"
+      "2020-06-12 08:04:54,824\tINFO resource_spec.py:212 -- Starting Ray with 3.86 GiB memory available for workers and up to 1.93 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
+      "2020-06-12 08:04:55,155\tINFO services.py:1170 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8266\u001b[39m\u001b[22m\n"
      ]
     },
     {
@@ -108,14 +158,14 @@
       "text/plain": [
        "{'node_ip_address': '192.168.1.149',\n",
        " 'raylet_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:45208',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-05-11_13-20-42_955441_17141/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-05-11_13-20-42_955441_17141/sockets/raylet',\n",
-       " 'webui_url': 'localhost:8265',\n",
-       " 'session_dir': '/tmp/ray/session_2020-05-11_13-20-42_955441_17141'}"
+       " 'redis_address': '192.168.1.149:52807',\n",
+       " 'object_store_address': '/tmp/ray/session_2020-06-12_08-04-54_815421_34546/sockets/plasma_store',\n",
+       " 'raylet_socket_name': '/tmp/ray/session_2020-06-12_08-04-54_815421_34546/sockets/raylet',\n",
+       " 'webui_url': 'localhost:8266',\n",
+       " 'session_dir': '/tmp/ray/session_2020-06-12_08-04-54_815421_34546'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dashboard URL: http://localhost:8265\n"
+      "Dashboard URL: http://localhost:8266\n"
      ]
     }
    ],
