--- a/ray-rllib/04b-Application-Taxi.ipynb
+++ b/ray-rllib/04b-Application-Taxi.ipynb
@@ -29,6 +29,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start up Ray as in the previous lesson:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!../tools/start-ray.sh --check --verbose"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
