--- a/ray-rllib/04a-Application-Mountain-Car.ipynb
+++ b/ray-rllib/04a-Application-Mountain-Car.ipynb
@@ -36,6 +36,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start up Ray as in the previous lessons:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!../tools/start-ray.sh --check --verbose"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
