Refactored and improved graphing functions.

--- a/ray-rllib/03-Application-Cart-Pole.ipynb
+++ b/ray-rllib/03-Application-Cart-Pole.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,30 +43,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import json, os, shutil"
+    "import json, os, shutil, sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append('..') # so we can import from \"util\"\n",
+    "from util.line_plots import plot_line_with_min_max"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model *checkpoints* will get saved after each iteration into directories under `/tmp/ppo/cart`.\n",
+    "Model *checkpoints* will get saved after each iteration into directories under `tmp/ppo/cart`, i.e., relative to this directory. \n",
+    "The default directories for checkpoints are `$HOME/ray_results/<algo_env>/.../checkpoint_N`.\n",
     "\n",
-    "> **Note:** If you prefer to use a different directory root than `/tmp`, change it in the next cell _and_ in the `rllib rollout` below."
+    "> **Note:** If you prefer to use a different directory root, change it in the next cell _and_ in the `rllib rollout` command below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_root = '/tmp/ppo/cart'"
+    "checkpoint_root = 'tmp/ppo/cart'"
    ]
   },
   {
@@ -78,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,40 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "ERROR: Multiple instances of Ray are running:\n",
-      "ERROR:   '192.168.1.149:28950', '192.168.1.149:15832'\n",
-      "ERROR: This probably means that one or more notebooks started Ray incorrectly, in addition\n",
-      "ERROR: to running this ../tools/start-ray.sh script that should be used instead.\n",
-      "ERROR:\n",
-      "ERROR:    **** Please report this bug to academy@anyscale.com ****\n",
-      "ERROR:\n",
-      "ERROR: To clean up now, go to the other notebook tabs. For each one, add and run a new code\n",
-      "ERROR: cell with the following statement:\n",
-      "\n",
-      "\tray.shutdown()\n",
-      "\n",
-      "ERROR: Then try running this cell again. If it now prints the following, everything is okay:\n",
-      "\n",
-      "\tINFO: Ray is already running.\n",
-      "\n",
-      "ERROR: However, if it still prints that multiple instances of ray are running (this message!),\n",
-      "ERROR: then do the following steps:\n",
-      "ERROR: 1. Run \"ray stop\" SEVERAL TIMES in a terminal window.\n",
-      "ERROR:    (You can start a terminal in Jupyter. Click the + under the Edit menu.)\n",
-      "ERROR: 2. Close all the other notebooks.\n",
-      "ERROR: 3. Shutdown their kernels using the Jupyter tab on the left-hand side that shows the\n",
-      "ERROR:    running kernels.\n",
-      "ERROR: Once these steps are done, then rerun the previous cell to check again. Follow\n",
-      "ERROR: the instructions that will be printed to start Ray.\n",
-      "\n"
+      "INFO: Ray is already running.\n"
      ]
     }
    ],
@@ -142,15 +127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-06-12 08:04:54,824\tINFO resource_spec.py:212 -- Starting Ray with 3.86 GiB memory available for workers and up to 1.93 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
-      "2020-06-12 08:04:55,155\tINFO services.py:1170 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8266\u001b[39m\u001b[22m\n"
+      "2020-06-13 07:21:25,472\tINFO resource_spec.py:212 -- Starting Ray with 3.71 GiB memory available for workers and up to 1.86 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
+      "2020-06-13 07:21:25,824\tINFO services.py:1170 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8266\u001b[39m\u001b[22m\n"
      ]
     },
     {
@@ -158,14 +143,14 @@
       "text/plain": [
        "{'node_ip_address': '192.168.1.149',\n",
        " 'raylet_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:52807',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-06-12_08-04-54_815421_34546/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-06-12_08-04-54_815421_34546/sockets/raylet',\n",
+       " 'redis_address': '192.168.1.149:34141',\n",
+       " 'object_store_address': '/tmp/ray/session_2020-06-13_07-21-25_460041_64537/sockets/plasma_store',\n",
+       " 'raylet_socket_name': '/tmp/ray/session_2020-06-13_07-21-25_460041_64537/sockets/raylet',\n",
        " 'webui_url': 'localhost:8266',\n",
-       " 'session_dir': '/tmp/ray/session_2020-06-12_08-04-54_815421_34546'}"
+       " 'session_dir': '/tmp/ray/session_2020-06-13_07-21-25_460041_64537'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +189,16 @@
    "source": [
     "Next we'll train an RLlib policy with the [`CartPole-v0` environment](https://gym.openai.com/envs/CartPole-v0/).\n",
     "\n",
+    "If you've gone through the _Multi-Armed Bandits_ lessons, you may recall that we used [Ray Tune](http://tune.io), the Ray Hyperparameter Tuning system, to drive training. Here we'll do it ourselves.\n",
+    "\n",
     "By default, training runs for `10` iterations. Increase the `N_ITER` setting if you want to train longer and see the resulting rewards improve. However, if the max score of `200` is achieved early, you can use a smaller number of iterations.\n",
+    "\n",
+    "\n",
+    "- `num_workers` is the number of actors that the agent will create. This determines the degree of parallelism that will be used. In a cluster, these actors will be spread over the available nodes.\n",
+    "- `num_sgd_iter` is the number of epochs of SGD (stochastic gradient descent, i.e., passes through the data) that will be used to optimize the PPO surrogate objective at each iteration of PPO, for each _minibatch_ (\"chunk\") of training data. Using minibatches is more efficient than training with one record at a time.\n",
+    "- `sgd_minibatch_size` is the SGD minibatch size (batches of data) that will be used to optimize the PPO surrogate objective.\n",
+    "- `model` contains a dictionary of parameters describing the neural net used to parameterize the policy. The `fcnet_hiddens` parameter is a list of the sizes of the hidden layers. Here, we have two hidden layers of size 100, each.\n",
+    "- `num_cpus_per_worker` when set to 0 prevents Ray from pinning a CPU core to each worker, which means we could run out of workers in a constrained environment like a laptop or a cloud VM.\n",
     "\n",
     "> **Note:** If you change the values shown for `config['model']['fcnet_hiddens']`, make the same change in the `rllib rollout` command below!"
    ]
@@ -215,17 +209,160 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SELECT_ENV = \"CartPole-v0\"\n",
-    "N_ITER = 10\n",
+    "SELECT_ENV = \"CartPole-v0\"                      # Specifies the OpenAI Gym environment for Cart Pole\n",
+    "N_ITER = 10                                     # Number of training runs.\n",
     "\n",
-    "config = ppo.DEFAULT_CONFIG.copy()\n",
-    "config[\"log_level\"] = \"WARN\"\n",
-    "# Other settings we might use:\n",
-    "config['num_workers'] = 1\n",
-    "config['num_sgd_iter'] = 10\n",
-    "config['sgd_minibatch_size'] = 250\n",
-    "config['model']['fcnet_hiddens'] = [100, 50]\n",
+    "config = ppo.DEFAULT_CONFIG.copy()              # PPO's default configuration. See the next code cell.\n",
+    "config[\"log_level\"] = \"WARN\"                    # Suppress too many messages, but try \"INFO\" to see what can be printed.\n",
+    "# Other settings we might adjust:\n",
+    "config['num_workers'] = 1                       # Use > 1 for cluster training\n",
+    "config['num_sgd_iter'] = 10                     # Number of SGD (stochastic gradient descent) iterations per training minibatch.\n",
+    "                                                # I.e., for each minibatch of data, do this many passes over it to train. \n",
+    "config['sgd_minibatch_size'] = 250              # The amount of data records per minibatch\n",
+    "config['model']['fcnet_hiddens'] = [100, 50]    #\n",
     "config['num_cpus_per_worker'] = 0  # This avoids running out of resources in the notebook environment when this cell is re-executed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Out of curiousity, let's see what configuration settings are defined for PPO. Note in particular the parameters for the deep learning `model`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'num_workers': 2,\n",
+       " 'num_envs_per_worker': 1,\n",
+       " 'rollout_fragment_length': 200,\n",
+       " 'sample_batch_size': -1,\n",
+       " 'batch_mode': 'truncate_episodes',\n",
+       " 'num_gpus': 0,\n",
+       " 'train_batch_size': 4000,\n",
+       " 'model': {'conv_filters': None,\n",
+       "  'conv_activation': 'relu',\n",
+       "  'fcnet_activation': 'tanh',\n",
+       "  'fcnet_hiddens': [256, 256],\n",
+       "  'free_log_std': False,\n",
+       "  'no_final_linear': False,\n",
+       "  'vf_share_layers': True,\n",
+       "  'use_lstm': False,\n",
+       "  'max_seq_len': 20,\n",
+       "  'lstm_cell_size': 256,\n",
+       "  'lstm_use_prev_action_reward': False,\n",
+       "  'state_shape': None,\n",
+       "  'framestack': True,\n",
+       "  'dim': 84,\n",
+       "  'grayscale': False,\n",
+       "  'zero_mean': True,\n",
+       "  'custom_model': None,\n",
+       "  'custom_action_dist': None,\n",
+       "  'custom_options': {},\n",
+       "  'custom_preprocessor': None},\n",
+       " 'optimizer': {},\n",
+       " 'gamma': 0.99,\n",
+       " 'horizon': None,\n",
+       " 'soft_horizon': False,\n",
+       " 'no_done_at_end': False,\n",
+       " 'env_config': {},\n",
+       " 'env': None,\n",
+       " 'normalize_actions': False,\n",
+       " 'clip_rewards': None,\n",
+       " 'clip_actions': True,\n",
+       " 'preprocessor_pref': 'deepmind',\n",
+       " 'lr': 5e-05,\n",
+       " 'monitor': False,\n",
+       " 'log_level': 'WARN',\n",
+       " 'callbacks': ray.rllib.agents.callbacks.DefaultCallbacks,\n",
+       " 'ignore_worker_failures': False,\n",
+       " 'log_sys_usage': True,\n",
+       " 'use_pytorch': False,\n",
+       " 'eager': False,\n",
+       " 'eager_tracing': False,\n",
+       " 'no_eager_on_workers': False,\n",
+       " 'explore': True,\n",
+       " 'exploration_config': {'type': 'StochasticSampling'},\n",
+       " 'evaluation_interval': None,\n",
+       " 'evaluation_num_episodes': 10,\n",
+       " 'in_evaluation': False,\n",
+       " 'evaluation_config': {},\n",
+       " 'evaluation_num_workers': 0,\n",
+       " 'custom_eval_function': None,\n",
+       " 'use_exec_api': False,\n",
+       " 'sample_async': False,\n",
+       " 'observation_filter': 'NoFilter',\n",
+       " 'synchronize_filters': True,\n",
+       " 'tf_session_args': {'intra_op_parallelism_threads': 2,\n",
+       "  'inter_op_parallelism_threads': 2,\n",
+       "  'gpu_options': {'allow_growth': True},\n",
+       "  'log_device_placement': False,\n",
+       "  'device_count': {'CPU': 1},\n",
+       "  'allow_soft_placement': True},\n",
+       " 'local_tf_session_args': {'intra_op_parallelism_threads': 8,\n",
+       "  'inter_op_parallelism_threads': 8},\n",
+       " 'compress_observations': False,\n",
+       " 'collect_metrics_timeout': 180,\n",
+       " 'metrics_smoothing_episodes': 100,\n",
+       " 'remote_worker_envs': False,\n",
+       " 'remote_env_batch_wait_ms': 0,\n",
+       " 'min_iter_time_s': 0,\n",
+       " 'timesteps_per_iteration': 0,\n",
+       " 'seed': None,\n",
+       " 'extra_python_environs_for_driver': {},\n",
+       " 'extra_python_environs_for_worker': {},\n",
+       " 'num_cpus_per_worker': 1,\n",
+       " 'num_gpus_per_worker': 0,\n",
+       " 'custom_resources_per_worker': {},\n",
+       " 'num_cpus_for_driver': 1,\n",
+       " 'memory': 0,\n",
+       " 'object_store_memory': 0,\n",
+       " 'memory_per_worker': 0,\n",
+       " 'object_store_memory_per_worker': 0,\n",
+       " 'input': 'sampler',\n",
+       " 'input_evaluation': ['is', 'wis'],\n",
+       " 'postprocess_inputs': False,\n",
+       " 'shuffle_buffer_size': 0,\n",
+       " 'output': None,\n",
+       " 'output_compress_columns': ['obs', 'new_obs'],\n",
+       " 'output_max_file_size': 67108864,\n",
+       " 'multiagent': {'policies': {},\n",
+       "  'policy_mapping_fn': None,\n",
+       "  'policies_to_train': None},\n",
+       " 'use_critic': True,\n",
+       " 'use_gae': True,\n",
+       " 'lambda': 1.0,\n",
+       " 'kl_coeff': 0.2,\n",
+       " 'sgd_minibatch_size': 128,\n",
+       " 'shuffle_sequences': True,\n",
+       " 'num_sgd_iter': 30,\n",
+       " 'lr_schedule': None,\n",
+       " 'vf_share_layers': False,\n",
+       " 'vf_loss_coeff': 1.0,\n",
+       " 'entropy_coeff': 0.0,\n",
+       " 'entropy_coeff_schedule': None,\n",
+       " 'clip_param': 0.3,\n",
+       " 'vf_clip_param': 10.0,\n",
+       " 'grad_clip': None,\n",
+       " 'kl_target': 0.01,\n",
+       " 'simple_optimizer': False,\n",
+       " '_fake_gpus': False}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ppo.DEFAULT_CONFIG"
    ]
   },
   {
@@ -276,7 +413,7 @@
     "    episode_data.append(episode)\n",
     "    episode_json.append(json.dumps(episode))\n",
     "    file_name = agent.save(checkpoint_root)\n",
-    "    print(f'Max reward: {episode[\"episode_reward_max\"]}. Checkpoint saved to {file_name}')"
+    "    print(f'Min/Mean/Max reward: {episode[\"episode_reward_min\"]}/{episode[\"episode_reward_mean\"]}/{episode[\"episode_reward_max\"]}. Checkpoint saved to {file_name}')"
    ]
   },
   {
