--- a/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
+++ b/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
@@ -35,31 +35,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/sh: ../../tools/start-ray.sh: No such file or directory\n"
+      "INFO: Ray is already running.\n"
      ]
     }
    ],
    "source": [
-    "!../../tools/start-ray.sh --check --verbose"
+    "!../../../tools/start-ray.sh --check --verbose"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-06-13 10:05:08,088\tWARNING worker.py:809 -- When connecting to an existing cluster, _internal_config must match the cluster's _internal_config.\n"
+      "2020-06-13 10:46:34,402\tWARNING worker.py:809 -- When connecting to an existing cluster, _internal_config must match the cluster's _internal_config.\n"
      ]
     },
     {
@@ -74,7 +74,7 @@
        " 'session_dir': '/tmp/ray/session_2020-06-12_08-58-38_626987_40764'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "'Initial observation = [ 1. -1.], bandit = SimpleContextualBandit2(action_space=Discrete(3), observation_space=Box(2,), current_context=-1.0, rewards per context={-1.0: [-10, 0, 10], 1.0: [10, 0, -10]})'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -179,7 +179,7 @@
     {
      "data": {
       "text/html": [
-       "== Status ==<br>Memory usage on this node: 10.8/16.0 GiB<br>Using FIFO scheduling algorithm.<br>Resources requested: 1/8 CPUs, 0/0 GPUs, 0.0/3.81 GiB heap, 0.0/1.27 GiB objects<br>Result logdir: /Users/deanwampler/ray_results/contrib/LinUCB<br>Number of trials: 1 (1 RUNNING)<br><table>\n",
+       "== Status ==<br>Memory usage on this node: 10.7/16.0 GiB<br>Using FIFO scheduling algorithm.<br>Resources requested: 1/8 CPUs, 0/0 GPUs, 0.0/3.81 GiB heap, 0.0/1.27 GiB objects<br>Result logdir: /Users/deanwampler/ray_results/contrib/LinUCB<br>Number of trials: 1 (1 RUNNING)<br><table>\n",
        "<thead>\n",
        "<tr><th>Trial name                                  </th><th>status  </th><th>loc  </th></tr>\n",
        "</thead>\n",
@@ -199,100 +199,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2m\u001b[36m(pid=76382)\u001b[0m 2020-06-13 10:05:16,867\tINFO trainer.py:421 -- Tip: set 'eager': true or the --eager flag to enable TensorFlow eager execution\n",
-      "\u001b[2m\u001b[36m(pid=76382)\u001b[0m 2020-06-13 10:05:16,871\tINFO trainer.py:580 -- Current log_level is WARN. For more information, set 'log_level': 'INFO' / 'DEBUG' or use the -v and -vv flags.\n",
-      "\u001b[2m\u001b[36m(pid=76382)\u001b[0m 2020-06-13 10:05:16,879\tINFO trainable.py:217 -- Getting current IP.\n",
-      "\u001b[2m\u001b[36m(pid=76382)\u001b[0m 2020-06-13 10:05:16,879\tWARNING util.py:37 -- Install gputil for GPU system monitoring.\n",
+      "\u001b[2m\u001b[36m(pid=78530)\u001b[0m 2020-06-13 10:46:56,758\tINFO trainer.py:421 -- Tip: set 'eager': true or the --eager flag to enable TensorFlow eager execution\n",
+      "\u001b[2m\u001b[36m(pid=78530)\u001b[0m 2020-06-13 10:46:56,762\tINFO trainer.py:580 -- Current log_level is WARN. For more information, set 'log_level': 'INFO' / 'DEBUG' or use the -v and -vv flags.\n",
+      "\u001b[2m\u001b[36m(pid=78530)\u001b[0m 2020-06-13 10:46:56,787\tINFO trainable.py:217 -- Getting current IP.\n",
+      "\u001b[2m\u001b[36m(pid=78530)\u001b[0m 2020-06-13 10:46:56,788\tWARNING util.py:37 -- Install gputil for GPU system monitoring.\n",
       "Result for contrib_LinUCB_SimpleContextualBandit2_00000:\n",
       "  custom_metrics: {}\n",
-      "  date: 2020-06-13_10-05-16\n",
+      "  date: 2020-06-13_10-46-57\n",
       "  done: false\n",
       "  episode_len_mean: 1.0\n",
       "  episode_reward_max: 10.0\n",
-      "  episode_reward_mean: 9.9\n",
-      "  episode_reward_min: 0.0\n",
+      "  episode_reward_mean: 9.7\n",
+      "  episode_reward_min: -10.0\n",
       "  episodes_this_iter: 100\n",
       "  episodes_total: 100\n",
-      "  experiment_id: deb68215eecb41379d2ca212fa445799\n",
+      "  experiment_id: a4bf63942e5f4d5ab357e19001c0f7dd\n",
       "  experiment_tag: '0'\n",
-      "  grad_time_ms: 0.317\n",
+      "  grad_time_ms: 0.272\n",
       "  hostname: DWAnyscaleMBP.local\n",
       "  info:\n",
-      "    grad_time_ms: 0.317\n",
+      "    grad_time_ms: 0.272\n",
       "    learner:\n",
-      "      cumulative_regret: 10.0\n",
-      "      update_latency: 0.0004050731658935547\n",
+      "      cumulative_regret: 30.0\n",
+      "      update_latency: 0.00013494491577148438\n",
       "    num_steps_sampled: 100\n",
       "    num_steps_trained: 100\n",
-      "    opt_peak_throughput: 3153.612\n",
+      "    opt_peak_throughput: 3674.379\n",
       "    opt_samples: 1.0\n",
-      "    sample_peak_throughput: 1222.045\n",
-      "    sample_time_ms: 0.818\n",
+      "    sample_peak_throughput: 1301.811\n",
+      "    sample_time_ms: 0.768\n",
       "    update_time_ms: 0.001\n",
       "  iterations_since_restore: 1\n",
       "  learner:\n",
-      "    cumulative_regret: 10.0\n",
-      "    update_latency: 0.0004050731658935547\n",
+      "    cumulative_regret: 30.0\n",
+      "    update_latency: 0.00013494491577148438\n",
       "  node_ip: 192.168.1.149\n",
       "  num_healthy_workers: 0\n",
       "  num_steps_sampled: 100\n",
       "  num_steps_trained: 100\n",
       "  off_policy_estimator: {}\n",
-      "  opt_peak_throughput: 3153.612\n",
+      "  opt_peak_throughput: 3674.379\n",
       "  opt_samples: 1.0\n",
       "  optimizer_steps_this_iter: 100\n",
       "  perf:\n",
-      "    cpu_util_percent: 29.0\n",
-      "    ram_util_percent: 67.2\n",
-      "  pid: 76382\n",
+      "    cpu_util_percent: 24.2\n",
+      "    ram_util_percent: 66.8\n",
+      "  pid: 78530\n",
       "  policy_reward_max: {}\n",
       "  policy_reward_mean: {}\n",
       "  policy_reward_min: {}\n",
-      "  sample_peak_throughput: 1222.045\n",
-      "  sample_time_ms: 0.818\n",
+      "  sample_peak_throughput: 1301.811\n",
+      "  sample_time_ms: 0.768\n",
       "  sampler_perf:\n",
-      "    mean_env_wait_ms: 0.027507838636341656\n",
-      "    mean_inference_ms: 0.3931380734585299\n",
-      "    mean_processing_ms: 0.2779370487326443\n",
-      "  time_since_restore: 0.10740494728088379\n",
-      "  time_this_iter_s: 0.10740494728088379\n",
-      "  time_total_s: 0.10740494728088379\n",
-      "  timestamp: 1592067916\n",
+      "    mean_env_wait_ms: 0.07369022558231167\n",
+      "    mean_inference_ms: 1.1098856973175957\n",
+      "    mean_processing_ms: 0.6869193350914684\n",
+      "  time_since_restore: 0.28530025482177734\n",
+      "  time_this_iter_s: 0.28530025482177734\n",
+      "  time_total_s: 0.28530025482177734\n",
+      "  timestamp: 1592070417\n",
       "  timesteps_since_restore: 100\n",
       "  timesteps_this_iter: 100\n",
       "  timesteps_total: 100\n",
       "  training_iteration: 1\n",
       "  trial_id: '00000'\n",
       "  update_time_ms: 0.001\n",
-      "  \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "== Status ==<br>Memory usage on this node: 10.8/16.0 GiB<br>Using FIFO scheduling algorithm.<br>Resources requested: 1/8 CPUs, 0/0 GPUs, 0.0/3.81 GiB heap, 0.0/1.27 GiB objects<br>Result logdir: /Users/deanwampler/ray_results/contrib/LinUCB<br>Number of trials: 1 (1 RUNNING)<br><table>\n",
-       "<thead>\n",
-       "<tr><th>Trial name                                  </th><th>status  </th><th>loc                </th><th style=\"text-align: right;\">  iter</th><th style=\"text-align: right;\">  total time (s)</th><th style=\"text-align: right;\">  ts</th><th style=\"text-align: right;\">  reward</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "<tr><td>contrib_LinUCB_SimpleContextualBandit2_00000</td><td>RUNNING </td><td>192.168.1.149:76382</td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">        0.107405</td><td style=\"text-align: right;\"> 100</td><td style=\"text-align: right;\">     9.9</td></tr>\n",
-       "</tbody>\n",
-       "</table><br><br>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  \n",
       "Result for contrib_LinUCB_SimpleContextualBandit2_00000:\n",
       "  custom_metrics: {}\n",
-      "  date: 2020-06-13_10-05-17\n",
+      "  date: 2020-06-13_10-46-57\n",
       "  done: true\n",
       "  episode_len_mean: 1.0\n",
       "  episode_reward_max: 10.0\n",
@@ -300,49 +275,49 @@
       "  episode_reward_min: 10.0\n",
       "  episodes_this_iter: 100\n",
       "  episodes_total: 200\n",
-      "  experiment_id: deb68215eecb41379d2ca212fa445799\n",
+      "  experiment_id: a4bf63942e5f4d5ab357e19001c0f7dd\n",
       "  experiment_tag: '0'\n",
-      "  grad_time_ms: 0.283\n",
+      "  grad_time_ms: 0.258\n",
       "  hostname: DWAnyscaleMBP.local\n",
       "  info:\n",
-      "    grad_time_ms: 0.283\n",
+      "    grad_time_ms: 0.258\n",
       "    learner:\n",
-      "      cumulative_regret: 10.0\n",
-      "      update_latency: 0.00021791458129882812\n",
+      "      cumulative_regret: 30.0\n",
+      "      update_latency: 0.00013017654418945312\n",
       "    num_steps_sampled: 200\n",
       "    num_steps_trained: 200\n",
-      "    opt_peak_throughput: 3537.407\n",
+      "    opt_peak_throughput: 3883.255\n",
       "    opt_samples: 1.0\n",
-      "    sample_peak_throughput: 1336.361\n",
-      "    sample_time_ms: 0.748\n",
+      "    sample_peak_throughput: 1280.234\n",
+      "    sample_time_ms: 0.781\n",
       "    update_time_ms: 0.001\n",
       "  iterations_since_restore: 2\n",
       "  learner:\n",
-      "    cumulative_regret: 10.0\n",
-      "    update_latency: 0.00021791458129882812\n",
+      "    cumulative_regret: 30.0\n",
+      "    update_latency: 0.00013017654418945312\n",
       "  node_ip: 192.168.1.149\n",
       "  num_healthy_workers: 0\n",
       "  num_steps_sampled: 200\n",
       "  num_steps_trained: 200\n",
       "  off_policy_estimator: {}\n",
-      "  opt_peak_throughput: 3537.407\n",
+      "  opt_peak_throughput: 3883.255\n",
       "  opt_samples: 1.0\n",
       "  optimizer_steps_this_iter: 100\n",
       "  perf: {}\n",
-      "  pid: 76382\n",
+      "  pid: 78530\n",
       "  policy_reward_max: {}\n",
       "  policy_reward_mean: {}\n",
       "  policy_reward_min: {}\n",
-      "  sample_peak_throughput: 1336.361\n",
-      "  sample_time_ms: 0.748\n",
+      "  sample_peak_throughput: 1280.234\n",
+      "  sample_time_ms: 0.781\n",
       "  sampler_perf:\n",
-      "    mean_env_wait_ms: 0.030136820095688535\n",
-      "    mean_inference_ms: 0.41210829322017845\n",
-      "    mean_processing_ms: 0.2878459531869461\n",
-      "  time_since_restore: 0.2225627899169922\n",
-      "  time_this_iter_s: 0.1151578426361084\n",
-      "  time_total_s: 0.2225627899169922\n",
-      "  timestamp: 1592067917\n",
+      "    mean_env_wait_ms: 0.05078434351071791\n",
+      "    mean_inference_ms: 0.7479689014491748\n",
+      "    mean_processing_ms: 0.4758372235654004\n",
+      "  time_since_restore: 0.38694024085998535\n",
+      "  time_this_iter_s: 0.10163998603820801\n",
+      "  time_total_s: 0.38694024085998535\n",
+      "  timestamp: 1592070417\n",
       "  timesteps_since_restore: 200\n",
       "  timesteps_this_iter: 100\n",
       "  timesteps_total: 200\n",
@@ -355,12 +330,12 @@
     {
      "data": {
       "text/html": [
-       "== Status ==<br>Memory usage on this node: 10.8/16.0 GiB<br>Using FIFO scheduling algorithm.<br>Resources requested: 0/8 CPUs, 0/0 GPUs, 0.0/3.81 GiB heap, 0.0/1.27 GiB objects<br>Result logdir: /Users/deanwampler/ray_results/contrib/LinUCB<br>Number of trials: 1 (1 TERMINATED)<br><table>\n",
+       "== Status ==<br>Memory usage on this node: 10.7/16.0 GiB<br>Using FIFO scheduling algorithm.<br>Resources requested: 0/8 CPUs, 0/0 GPUs, 0.0/3.81 GiB heap, 0.0/1.27 GiB objects<br>Result logdir: /Users/deanwampler/ray_results/contrib/LinUCB<br>Number of trials: 1 (1 TERMINATED)<br><table>\n",
        "<thead>\n",
        "<tr><th>Trial name                                  </th><th>status    </th><th>loc  </th><th style=\"text-align: right;\">  iter</th><th style=\"text-align: right;\">  total time (s)</th><th style=\"text-align: right;\">  ts</th><th style=\"text-align: right;\">  reward</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "<tr><td>contrib_LinUCB_SimpleContextualBandit2_00000</td><td>TERMINATED</td><td>     </td><td style=\"text-align: right;\">     2</td><td style=\"text-align: right;\">        0.222563</td><td style=\"text-align: right;\"> 200</td><td style=\"text-align: right;\">      10</td></tr>\n",
+       "<tr><td>contrib_LinUCB_SimpleContextualBandit2_00000</td><td>TERMINATED</td><td>     </td><td style=\"text-align: right;\">     2</td><td style=\"text-align: right;\">         0.38694</td><td style=\"text-align: right;\"> 200</td><td style=\"text-align: right;\">      10</td></tr>\n",
        "</tbody>\n",
        "</table><br><br>"
       ],
@@ -375,7 +350,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The trials took 8.996961116790771 seconds\n",
+      "The trials took 8.502413749694824 seconds\n",
       "\n"
      ]
     }
@@ -393,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -450,18 +425,18 @@
        "      <td>100</td>\n",
        "      <td>200</td>\n",
        "      <td>200</td>\n",
-       "      <td>0.748</td>\n",
-       "      <td>0.283</td>\n",
+       "      <td>0.781</td>\n",
+       "      <td>0.258</td>\n",
        "      <td>0.001</td>\n",
        "      <td>...</td>\n",
-       "      <td>1336.361</td>\n",
+       "      <td>1280.234</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.000218</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.00013</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.000218</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.00013</td>\n",
        "      <td>&lt;class '__main__.SimpleContextualBandit2'&gt;</td>\n",
        "      <td>/Users/deanwampler/ray_results/contrib/LinUCB/...</td>\n",
        "    </tr>\n",
@@ -478,16 +453,16 @@
        "0               1.0                 100                200                200   \n",
        "\n",
        "   sample_time_ms  grad_time_ms  update_time_ms  ...  \\\n",
-       "0           0.748         0.283           0.001  ...   \n",
+       "0           0.781         0.258           0.001  ...   \n",
        "\n",
        "   info/sample_peak_throughput  info/opt_samples  learner/cumulative_regret  \\\n",
-       "0                     1336.361               1.0                       10.0   \n",
+       "0                     1280.234               1.0                       30.0   \n",
        "\n",
        "   learner/update_latency  perf/cpu_util_percent  perf/ram_util_percent  \\\n",
-       "0                0.000218                    NaN                    NaN   \n",
+       "0                 0.00013                    NaN                    NaN   \n",
        "\n",
        "   info/learner/cumulative_regret  info/learner/update_latency  \\\n",
-       "0                            10.0                     0.000218   \n",
+       "0                            30.0                      0.00013   \n",
        "\n",
        "                                   config/env  \\\n",
        "0  <class '__main__.SimpleContextualBandit2'>   \n",
@@ -498,7 +473,7 @@
        "[1 rows x 54 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
