A little more documentation

--- a/ray-rllib/03-Application-Cart-Pole.ipynb
+++ b/ray-rllib/03-Application-Cart-Pole.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "![Cart Pole](../images/rllib/Cart-Pole.png)\n",
     "\n",
-    "Even though this is a relatively simple and quick example to run, its results can be understood quite visually.\n",
+    "Even though this is a relatively simple and quick example to run, its results can be understood quite visually. _CartPole_ is one of OpenAI Gym's [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples.\n",
     "\n",
     "For more background about this problem, see:\n",
     "\n",
@@ -1174,6 +1174,15 @@
     "* [04c: Application: Frozen Lake](04c-Application-Frozen-Lake.ipynb) -- Based on the `FrozenLake-v0` environment from OpenAI Gym.\n",
     "\n",
     "Use TensorBoard to visualize their training runs, metrics, etc., as well. (These notebooks won't mention this suggestion.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise (\"Homework\")\n",
+    "\n",
+    "In addition to _Cart Pole_, as well as the _Mountain Car_ example explored in [04a: Application: Mountain Car](04a-Application-Mountain-Car.ipynb), there are other so-called [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples you can try."
    ]
   },
   {
