--- a/ray-rllib/04a-Application-Mountain-Car.ipynb
+++ b/ray-rllib/04a-Application-Mountain-Car.ipynb
@@ -18,6 +18,8 @@
     "\n",
     "> **Note:** This rollout can only show the rollout visualization popup windows when running on a local laptop.\n",
     "\n",
+    "Like _CartPole_, _MountainCar_ is one of OpenAI Gym's [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples.\n",
+    "\n",
     "For more background about this problem, see:\n",
     "\n",
     "* [\"Efficient memory-based learning for robot control\"](https://www.cl.cam.ac.uk/techreports/UCAM-CL-TR-209.pdf), [Andrew William Moore](https://www.cl.cam.ac.uk/~awm22/), University of Cambridge (1990)\n",
@@ -591,6 +593,22 @@
     "The rollout uses the second saved checkpoint, evaluated through `2000` steps.\n",
     "Modify the path to view other checkpoints."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise (\"Homework\")\n",
+    "\n",
+    "In addition to _Mountain Car_ and _Cart Pole_, there are other so-called [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples you can try."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
