--- a/ray-rllib/04b-Application-Taxi.ipynb
+++ b/ray-rllib/04b-Application-Taxi.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
-    "This example uses [RLlib](https://ray.readthedocs.io/en/latest/rllib.html) to train a policy with the `Taxi-v3` environment ([gym.openai.com/envs/Taxi-v3/](https://gym.openai.com/envs/Taxi-v3/)).\n",
+    "This example uses [RLlib](https://ray.readthedocs.io/en/latest/rllib.html) to train a policy with the `Taxi-v3` environment ([gym.openai.com/envs/Taxi-v3/](https://gym.openai.com/envs/Taxi-v3/)). The goal is to pick up passengers as fast as possible, negotiating the available paths. This is one of OpenAI Gym's [\"toy text\"](https://gym.openai.com/envs/#toy_text) problems.\n",
     "\n",
     "For more background about this problem, see:\n",
     "\n",
@@ -16330,6 +16330,15 @@
     "    tmp/ppo/taxi/checkpoint_10/checkpoint-10 \\\n",
     "    --config \"{\\\"env\\\": \\\"Taxi-v3\\\"}\" --run PPO \\\n",
     "    --steps 2000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise (\"Homework\")\n",
+    "\n",
+    "In addition to _Taxi_, there are other so-called [\"toy text\"](https://gym.openai.com/envs/#toy_text) problems you can try."
    ]
   },
   {
