--- a/ray-rllib/04c-Application-Frozen-Lake.ipynb
+++ b/ray-rllib/04c-Application-Frozen-Lake.ipynb
@@ -10492,6 +10492,22 @@
     "The rollout uses the second saved checkpoint, evaluated through `2000` steps.\n",
     "Modify the path to view other checkpoints."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise (\"Homework\")\n",
+    "\n",
+    "In addition to _Taxi_ and _Frozen Lake_, there are other so-called [\"toy text\"](https://gym.openai.com/envs/#toy_text) problems you can try."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
