Moved the mostly useless extra examples to another folder.

--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -37,10 +37,15 @@
     "| 01  | [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning. You can skim or skip this lesson if you already understand RL concepts. |\n",
     "| 02  | [Introduction to RLlib](02-Introduction-to-RLlib.ipynb) | An overview of RLlib, its goals and the capabilities it provides. |\n",
     "| 03  | [Application: Cart Pole](03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
-    "| 04a | [Application: Mountain Car](04a-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
-    "| 04b | [Application: Taxi](04b-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
-    "| 04c | [Application: Frozen Lake](04c-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
     "| 06  | [RL References](06-RL-References.ipynb) | References on reinforcement learning. |\n",
+    "\n",
+    "Some additional examples you might explore can be found in the `extras` folder:\n",
+    "\n",
+    "| Lesson | Description |\n",
+    "| :----- | :---------- |\n",
+    "| [Extra: Application - Mountain Car](extras/Extra-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
+    "| [Extra: Application - Taxi](extras/Extra-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
+    "| [Extra: Application - Frozen Lake](extras/Extra-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](solutions/Ray-RLlib-Solutions.ipynb).\n",
     "\n",
@@ -99,11 +104,11 @@
     "\n",
     "* [Application: Cart Pole](03-Application-Cart-Pole.ipynb)\n",
     "\n",
-    "If time permits, study one or more of these examples:\n",
+    "For examples that work with OpenAI Gym environments, study one or more of these \"extra\" examples:\n",
     "\n",
-    "* [Application: Mountain Car](04a-Application-Mountain-Car.ipynb)\n",
-    "* [Application: Taxi](04b-Application-Taxi.ipynb)\n",
-    "* [Application: Frozen Lake](04c-Application-Frozen-Lake.ipynb)\n",
+    "* [Extra: Application - Mountain Car](extras/Extra-Application-Mountain-Car.ipynb)\n",
+    "* [Extra: Application - Taxi](extras/Extra-Application-Taxi.ipynb)\n",
+    "* [Extra: Application - Frozen Lake](extras/Extra-Application-Frozen-Lake.ipynb)\n",
     "\n"
    ]
   },
