--- a/ray-rllib/03-Application-Cart-Pole.ipynb
+++ b/ray-rllib/03-Application-Cart-Pole.ipynb
@@ -1167,11 +1167,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, go through any of the following lessons:\n",
+    "For more examples of working with Gym environments, go through any of the \"extra\" lessons:\n",
     "\n",
-    "* [04a: Application: Mountain Car](04a-Application-Mountain-Car.ipynb) -- Based on the `MountainCar-v0` environment from OpenAI Gym.\n",
-    "* [04b: Application: Taxi](04b-Application-Taxi.ipynb) -- Based on the `Taxi-v3` environment from OpenAI Gym.\n",
-    "* [04c: Application: Frozen Lake](04c-Application-Frozen-Lake.ipynb) -- Based on the `FrozenLake-v0` environment from OpenAI Gym.\n",
+    "* [Extras: Application - Mountain Car](extras/Extra-Application-Mountain-Car.ipynb) -- Based on the `MountainCar-v0` environment from OpenAI Gym.\n",
+    "* [Extras: Application - Taxi](extras/Extra-Application-Taxi.ipynb) -- Based on the `Taxi-v3` environment from OpenAI Gym.\n",
+    "* [Extras: Application - Frozen Lake](extras/Extra-Application-Frozen-Lake.ipynb) -- Based on the `FrozenLake-v0` environment from OpenAI Gym.\n",
     "\n",
     "Use TensorBoard to visualize their training runs, metrics, etc., as well. (These notebooks won't mention this suggestion.)"
    ]
@@ -1182,7 +1182,7 @@
    "source": [
     "## Exercise (\"Homework\")\n",
     "\n",
-    "In addition to _Cart Pole_, as well as the _Mountain Car_ example explored in [04a: Application: Mountain Car](04a-Application-Mountain-Car.ipynb), there are other so-called [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples you can try."
+    "In addition to _Cart Pole_, as well as the _Mountain Car_ example explored in [Extras: Application: Mountain Car](extras/Extra-Application-Mountain-Car.ipynb), there are other so-called [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples you can try."
    ]
   },
   {
