--- a/ray-rllib/extras/Extra-Application-Frozen-Lake.ipynb
+++ b/ray-rllib/extras/Extra-Application-Frozen-Lake.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray RLlib - Sample Application: FrozenLake-v0\n",
+    "# Ray RLlib - Extra Application Example - FrozenLake-v0\n",
     "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
-    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "![Anyscale Academy](../../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
     "This example uses [RLlib](https://ray.readthedocs.io/en/latest/rllib.html) to train a policy with the `FrozenLake-v0` environment ([gym.openai.com/envs/FrozenLake-v0/](https://gym.openai.com/envs/FrozenLake-v0/)).\n",
     "\n",
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "!../tools/start-ray.sh --check --verbose"
+    "!../../tools/start-ray.sh --check --verbose"
    ]
   },
   {
