--- a/ray-rllib/extras/Extra-Application-Taxi.ipynb
+++ b/ray-rllib/extras/Extra-Application-Taxi.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray RLlib - Sample Application: Taxi-v3\n",
+    "# Ray RLlib - Extra Application Example - Taxi-v3\n",
     "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
-    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "![Anyscale Academy](../../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
     "This example uses [RLlib](https://ray.readthedocs.io/en/latest/rllib.html) to train a policy with the `Taxi-v3` environment ([gym.openai.com/envs/Taxi-v3/](https://gym.openai.com/envs/Taxi-v3/)). The goal is to pick up passengers as fast as possible, negotiating the available paths. This is one of OpenAI Gym's [\"toy text\"](https://gym.openai.com/envs/#toy_text) problems.\n",
     "\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "!../tools/start-ray.sh --check --verbose"
+    "!../../tools/start-ray.sh --check --verbose"
    ]
   },
   {
