--- a/ray-rllib/extras/Extra-Application-Mountain-Car.ipynb
+++ b/ray-rllib/extras/Extra-Application-Mountain-Car.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ray RLlib - Sample Application: MountainCar-v0\n",
+    "# Ray RLlib - Extra Application Example - MountainCar-v0\n",
     "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
-    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
+    "![Anyscale Academy](../../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
     "This example uses [RLlib](https://ray.readthedocs.io/en/latest/rllib.html) to train a policy with the `MountainCar-v0` environment, ([gym.openai.com/envs/MountainCar-v0/]. The idea is that a cart starts at an arbitrar point on a hill. Without any \"pushes\", it will rock back and forth between the two sides of the valley below, never rising above the starting point. However, there are three actions, accelerate to the left (by some unit), accelerate to the right, or apply no acceleration. Timing accelerations in the appropriate directions at the appropriate steps is the key to getting to the top of the hill.\n",
     "\n",
@@ -69,7 +69,7 @@
     }
    ],
    "source": [
-    "!../tools/start-ray.sh --check --verbose"
+    "!../../tools/start-ray.sh --check --verbose"
    ]
   },
   {
