Cleaned up the lesson plan

--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -104,12 +104,15 @@
     "\n",
     "* [Application: Cart Pole](03-Application-Cart-Pole.ipynb)\n",
     "\n",
-    "For examples that work with OpenAI Gym environments, study one or more of these \"extra\" examples:\n",
+    "then finish the rest of the `ray-rllib` tutorials:\n",
+    "\n",
+    "* TBD\n",
+    "\n",
+    "Other examples are provided for your use. See the `extras` directory for examples that work with other OpenAI Gym environments:\n",
     "\n",
     "* [Extra: Application - Mountain Car](extras/Extra-Application-Mountain-Car.ipynb)\n",
     "* [Extra: Application - Taxi](extras/Extra-Application-Taxi.ipynb)\n",
-    "* [Extra: Application - Frozen Lake](extras/Extra-Application-Frozen-Lake.ipynb)\n",
-    "\n"
+    "* [Extra: Application - Frozen Lake](extras/Extra-Application-Frozen-Lake.ipynb)"
    ]
   },
   {
