Refined the "learning plan".

--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -104,9 +104,10 @@
     "\n",
     "* [Application: Cart Pole](03-Application-Cart-Pole.ipynb)\n",
     "\n",
-    "then finish the rest of the `ray-rllib` tutorials:\n",
+    "Then finish the rest of the `ray-rllib` lessons:\n",
     "\n",
-    "* TBD\n",
+    "* [Custom Environments and Reward Shaping](04-Custom-Environments-Reward-Shaping.ipynb)\n",
+    "* [Online Learning with DQN](05-Online-Learning-with-DQN.ipynb)\n",
     "\n",
     "Other examples are provided for your use. See the `extras` directory for examples that work with other OpenAI Gym environments:\n",
     "\n",
